dons_tests/valid_kxi/return_type_check.kxi
class MyClass {
    static public int func(){
        return 1;
    }
    static public void func2(){}
    static public void func3(){
        return;
    }
}    
void main(){}
