dons_tests/invalid_kxi/this_in_static.kxi
class MyClass {
    public int x;
    static public int myfunc() {
        return this.x + 1;
    }
}
void main(){}
